--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "gcal-chrome-extension",
+  "name": "google-calendar-description-prefiller",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
     "dev": "tailwindcss -i ./input.css -o ./output.css -m --watch",
-    "build": "webpack && tailwindcss -i ./input.css -o ./output.css -m"
+    "build": "tailwindcss -i ./input.css -o ./output.css -m"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
