--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "tailwindcss -i ./input.css -o ./output.css -m --watch",
-    "build": "tailwindcss -i ./input.css -o ./output.css -m"
+    "build": "tailwindcss -i ./input.css -o ./output.css -m",
+    "zip": "zip build.zip background.js ckeditor.js content.js icon16.png icon48.png icon128.png manifest.json options.html options.js output.css"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
